--- a/data/apps.json
+++ b/data/apps.json
@@ -15,7 +15,7 @@
     "name": "Photos",
     "url": "/photos",
     "icon": "Photos.png",
-    "bgColour": "#b79dca"
+    "bgColour": "#f98d63"
   },
   {
     "name": "Designs",
