--- a/package.json
+++ b/package.json
@@ -8,20 +8,21 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.13",
-    "@tabler/icons-react": "^2.12.0",
+    "@tabler/icons-react": "^2.14.0",
     "@total-typescript/ts-reset": "^0.4.2",
     "@types/node": "18.15.11",
-    "@types/react": "18.0.31",
+    "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
     "animal-crossing": "^8.2.0",
     "autoprefixer": "^10.4.14",
+    "cloudinary": "^1.35.0",
     "clsx": "^1.2.1",
     "eslint": "8.37.0",
-    "eslint-config-next": "13.2.4",
-    "next": "13.2.4",
+    "eslint-config-next": "13.3.0",
+    "next": "13.3.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.7",
-    "prettier-plugin-tailwindcss": "^0.2.6",
+    "prettier-plugin-tailwindcss": "^0.2.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sharp": "^0.32.0",
