--- a/.env.local.example
+++ b/.env.local.example
@@ -2,3 +2,4 @@ NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=
 NEXT_PUBLIC_CLOUDINARY_FOLDER=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
+OPENWEATHER_API_KEY=
