--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.14",
+    "@headlessui/tailwindcss": "^0.1.3",
     "@tabler/icons-react": "^2.16.0",
     "@total-typescript/ts-reset": "^0.4.2",
     "@types/node": "18.15.11",
