--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "sharp": "^0.32.0",
     "swr": "^2.1.3",
     "tailwindcss": "^3.3.1",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "zod": "^3.21.4"
   }
 }
