Use `zod` for environment variables validation

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,6 +1,6 @@
 MY_SECRET_REVALIDATION_TOKEN=
-NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=
-NEXT_PUBLIC_CLOUDINARY_FOLDER=
+CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
+CLOUDINARY_FOLDER=
 OPENWEATHER_API_KEY=
