--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@headlessui/tailwindcss": "^0.2.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.0",
     "@t3-oss/env-nextjs": "^0.6.1",
     "@tabler/icons-react": "^2.30.0",
     "@total-typescript/ts-reset": "^0.5.1",
