--- a/.env.local.example
+++ b/.env.local.example
@@ -1,6 +1,11 @@
+# API key for On-demand Revalidation
 MY_SECRET_REVALIDATION_TOKEN=
+
+# Cloudinary API
 CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
 CLOUDINARY_FOLDER=
+
+# OpenWeather API
 OPENWEATHER_API_KEY=
