--- a/package.json
+++ b/package.json
@@ -9,18 +9,20 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@headlessui/tailwindcss": "^0.2.0",
-    "@tabler/icons-react": "^2.30.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.0",
+    "@t3-oss/env-nextjs": "^0.6.1",
+    "@tabler/icons-react": "^2.32.0",
     "@total-typescript/ts-reset": "^0.5.1",
-    "@types/node": "20.5.0",
-    "@types/react": "18.2.20",
+    "@types/node": "20.5.4",
+    "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "animal-crossing": "^8.2.0",
     "autoprefixer": "^10.4.15",
     "cloudinary": "^1.40.0",
     "clsx": "^2.0.0",
     "eslint": "8.47.0",
-    "eslint-config-next": "13.4.17",
-    "next": "13.4.17",
+    "eslint-config-next": "13.4.19",
+    "next": "13.4.19",
     "postcss": "^8.4.28",
     "prettier": "^3.0.2",
     "prettier-plugin-tailwindcss": "^0.5.3",
@@ -30,6 +32,6 @@
     "swr": "^2.2.1",
     "tailwindcss": "^3.3.3",
     "typescript": "5.1.6",
-    "zod": "^3.22.1"
+    "zod": "^3.22.2"
   }
 }
