--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ianvs/prettier-plugin-sort-imports": "^4.1.0",
     "@t3-oss/env-nextjs": "^0.6.1",
     "@tabler/icons-react": "^2.34.0",
+    "@tailwindcss/container-queries": "^0.1.1",
     "@total-typescript/ts-reset": "^0.5.1",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
