--- a/package.json
+++ b/package.json
@@ -11,25 +11,26 @@
     "@headlessui/tailwindcss": "^0.2.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.1.0",
     "@t3-oss/env-nextjs": "^0.6.1",
-    "@tabler/icons-react": "^2.34.0",
+    "@tabler/icons-react": "^2.35.0",
+    "@tailwindcss/container-queries": "^0.1.1",
     "@total-typescript/ts-reset": "^0.5.1",
-    "@types/node": "20.6.0",
-    "@types/react": "18.2.21",
+    "@types/node": "20.6.5",
+    "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "animal-crossing": "^8.2.0",
-    "autoprefixer": "^10.4.15",
+    "autoprefixer": "^10.4.16",
     "cloudinary": "^1.40.0",
     "clsx": "^2.0.0",
-    "dayjs": "^1.11.9",
-    "eslint": "8.49.0",
-    "eslint-config-next": "13.4.19",
-    "next": "13.4.19",
-    "postcss": "^8.4.29",
+    "dayjs": "^1.11.10",
+    "eslint": "8.50.0",
+    "eslint-config-next": "13.5.2",
+    "next": "13.5.2",
+    "postcss": "^8.4.30",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sharp": "^0.32.5",
+    "sharp": "^0.32.6",
     "swr": "^2.2.2",
     "tailwindcss": "^3.3.3",
     "typescript": "5.2.2",
