--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint ."
   },
   "dependencies": {
     "@headlessui/react": "^1.7.19",
@@ -15,16 +15,17 @@
     "@tailwindcss/container-queries": "^0.1.1",
     "@total-typescript/ts-reset": "^0.5.1",
     "@types/node": "20.12.8",
-    "@types/react": "18.3.1",
-    "@types/react-dom": "18.3.0",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
+    "@vercel/functions": "^3.3.5",
     "animal-crossing": "^8.2.0",
     "autoprefixer": "^10.4.19",
     "cloudinary": "^1.41.3",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.2.3",
-    "next": "14.2.3",
+    "eslint": "^9",
+    "eslint-config-next": "16.1.1",
+    "next": "16.1.1",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
@@ -35,5 +36,11 @@
     "tailwindcss": "^3.4.3",
     "typescript": "5.4.5",
     "zod": "^3.23.6"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "19.2.7",
+      "@types/react-dom": "19.2.3"
+    }
   }
 }
