--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tabler/icons-react": "^3.3.0",
     "@tailwindcss/container-queries": "^0.1.1",
+    "@tailwindcss/postcss": "^4.1.18",
     "@total-typescript/ts-reset": "^0.5.1",
     "@types/node": "20.12.8",
     "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
     "@vercel/functions": "^3.3.5",
     "animal-crossing": "^8.2.0",
-    "autoprefixer": "^10.4.19",
     "cloudinary": "^1.41.3",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
@@ -28,12 +28,12 @@
     "next": "16.1.1",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.14",
+    "prettier-plugin-tailwindcss": "^0.7.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "sharp": "^0.33.3",
     "swr": "^2.2.5",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^4.1.18",
     "typescript": "5.4.5",
     "zod": "^3.23.6"
   },
