--- a/package.json
+++ b/package.json
@@ -4,36 +4,36 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint ."
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.19",
-    "@headlessui/tailwindcss": "^0.2.0",
-    "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
-    "@t3-oss/env-nextjs": "^0.10.1",
-    "@tabler/icons-react": "^3.3.0",
+    "@headlessui/react": "^2.2.9",
+    "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
+    "@t3-oss/env-nextjs": "^0.13.10",
+    "@tabler/icons-react": "^3.36.1",
     "@tailwindcss/container-queries": "^0.1.1",
-    "@total-typescript/ts-reset": "^0.5.1",
-    "@types/node": "20.12.8",
-    "@types/react": "18.3.1",
-    "@types/react-dom": "18.3.0",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@total-typescript/ts-reset": "^0.6.1",
+    "@types/node": "25.0.3",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
+    "@vercel/functions": "^3.3.5",
     "animal-crossing": "^8.2.0",
-    "autoprefixer": "^10.4.19",
-    "cloudinary": "^1.41.3",
+    "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
-    "dayjs": "^1.11.11",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.2.3",
-    "next": "14.2.3",
-    "postcss": "^8.4.38",
-    "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.14",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "sharp": "^0.33.3",
-    "swr": "^2.2.5",
-    "tailwindcss": "^3.4.3",
-    "typescript": "5.4.5",
-    "zod": "^3.23.6"
+    "dayjs": "^1.11.19",
+    "eslint": "^9",
+    "eslint-config-next": "16.1.1",
+    "next": "16.1.1",
+    "postcss": "^8.5.6",
+    "prettier": "^3.7.4",
+    "prettier-plugin-tailwindcss": "^0.7.2",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
+    "sharp": "^0.34.5",
+    "swr": "^2.3.8",
+    "tailwindcss": "^4.1.18",
+    "typescript": "5.9.3",
+    "zod": "^4.3.5"
   }
 }
